--- a/wpbot/package.json
+++ b/wpbot/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "WhatsAsenaDuplicated",
+  "name": "wpbot",
   "version": "0.16.5",
   "description": "WhatsAsena project - a Whatsapp userbot helping to improve your Whatsapp experience.",
-  "main": "./WhatsAsenaDuplicated/bot.js",
+  "main": "./wpbo/bot.js",
   "scripts": {
     "start": "supervisor -s bot.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phaticusthiccy/WhatsAsenaDuplicated.git"
+    "url": "git+https:/https://github.com/xrombass/wpbot/tree/main/wpbot.git"
   },
   "keywords": [
     "whatsapp"
@@ -17,9 +17,9 @@
   "developer": "AsenaDev / @phaticusthiccy",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/phaticusthiccy/WhatsAsenaDuplicated/issues"
+    "url": "git+https:/https://github.com/xrombass/wpbot/tree/main/wpbot.git"
   },
-  "homepage": "https://github.com/phaticusthiccy/WhatsAsenaDuplicated#readme",
+  "homepage": "git+https:/https://github.com/xrombass/wpbot/tree/main/wpbot",
   "dependencies": {
     "@adiwajshing/baileys": "^3.4.1",
     "@lh2020/speedtest-net": "^2.1.1",
